Fix footer spacing

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -161,7 +161,7 @@ Page
         display: flex;
         align-items: center;
         .content {
-            padding: 50px 0;
+            padding: 100px 0;
             .sec-title {
                 text-align: center;
                 font-size: 50px;
@@ -419,7 +419,7 @@ Page
 #login {
     display: flex;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
     margin-top: 100px;
     margin-bottom: 100px;
     flex-grow: 1;
@@ -459,6 +459,7 @@ Footer
 
 footer {
     background-color: var(--global-color);
+    margin-top: 50px;
     .site-footer {
         padding: 30px 0;
         display: flex;
